# pbos

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  openapi.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  test_cbos.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_soft_delete_to_configuration.py  0003_add_role_scope_and_seed_superadmin.py  0003_add_waitlist_signups.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/audit/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/configuration/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  deps.py  logging.py  middleware.py  redis.py  security.py  token_store.py
backend/app/events/: models.py  repository.py
backend/app/identity/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/organizations/: models.py  repository.py
backend/app/rbac/: models.py  repository.py
backend/app/shared/: exceptions.py  models.py  repository.py  responses.py
backend/app/waitlist/: models.py  repository.py  router.py  schemas.py
backend/tests/: conftest.py
backend/tests/authorization/: test_rbac_enforcement.py  test_tenant_integrity.py  test_tenant_isolation.py
backend/tests/integration/: test_audit.py  test_auth.py  test_clients.py  test_projects.py  test_waitlist.py
backend/tests/unit/: test_auth_service.py  test_configuration_service.py  test_health.py  test_rbac_model.py  test_secret_key_validation.py  test_token_store_race.py  test_waitlist_repository.py
docs/: 04_DOMAIN_MODEL.md  05_ENTITY_MODEL.md  08_WORKFLOW_ENGINE.md  09_INDUSTRY_PACK_ARCHITECTURE.md  10_MASTER_ERD.md  11_SYSTEM_ARCHITECTURE.md  12_API_STANDARDS.md  13_RBAC_ARCHITECTURE.md  14_SPRINT_01_FOUNDATION.md  19_ARCHITECTURE_REMEDIATION_PLAN.md  99_ARCHITECTURE_GAP_ANALYSIS.md  EPIC_1_5_STATUS_REPORT.md  SPRINT_1_EXECUTION_PLAN.md
frontend/: .dockerignore  .eslintrc.cjs  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  (+5 more)
(+57 files in other folders)
